--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "install": "^0.13.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
